--- a/design.html
+++ b/design.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
 <html lang="en-us">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<head><link rel="stylesheet" href="design.css"></head>
+<head>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="description" content="Ranking everything!">
+    <meta name="Keywords" content="QUARAS Ranking Travel Movie Music Food Restaurant Sports">
+
+    <title>Quality Rankings
+
+	<link rel="stylesheet" href="design.css">
+
+</head>
 <body>
 
 </body>
