--- a/design.html
+++ b/design.html
@@ -1,18 +1,18 @@
-<!DOCTYPE html>
-<html lang="en-us">
-<head>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="description" content="Ranking everything!">
-    <meta name="Keywords" content="QUARAS Ranking Travel Movie Music Food Restaurant Sports">
+	<!DOCTYPE html>
+	<html lang="en-us">
+	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		
 
-    <title>Quality Rankings
+		
+		<meta name="description" content="Ranking everything!">
+	    <meta name="Keywords" content="QUARAS Ranking Travel Movie Music Food Restaurant Sports">
 
-	<link rel="stylesheet" href="design.css">
+	    <title>Quality Rankings </title>
+		<link rel="stylesheet" href="design.css">
 
-</head>
-<body>
+	</head>
+	<body>
 
-</body>
-</html>
+	</body>
+	</html>
