--- a/design.html
+++ b/design.html
@@ -2,8 +2,8 @@
 	<html lang="en-us">
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		
-
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="description" content="Ranking everything!">
 	    <meta name="Keywords" content="QUARAS Ranking Travel Movie Music Food Restaurant Sports">
 
